--- a/src/Global.css
+++ b/src/Global.css
@@ -1,13 +1,38 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500&family=Roboto:wght@400;500;700&display=swap");
+
+:root {
+  --black-color: #333333;
+  --author-color-name: #ab2680;
+  --book-discription-color: #999999;
+  --background-color: #e9e0e6;
+  --background-label: #00000052;
+  --background-label-input: #00000000;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  box-sizing: border-box;
+  border: none;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "Heebo", sans-serif;
+  line-height: 20px;
+}
+
+h1 {
+  color: var(--black-color);
+  font-size: 14px;
+  font-weight: 500;
+}
+
+h2 {
+  color: var(--author-color-name);
+  font-size: 12px;
+}
+
+p {
+  color: var(--book-discription-color);
+  font-size: 12px;
 }
