--- a/src/components/BookDetails/bookDetails.css
+++ b/src/components/BookDetails/bookDetails.css
@@ -97,15 +97,19 @@
 
 @media screen and (max-width: 414px) {
   .book-details {
-    height: 1050px;
+    height: 130vh;
     width: 100%;
+  }
+
+  .book-details .details-button {
+    margin: 16px 17px 16px auto;
   }
 
   .book-details .main-details {
     flex-direction: column;
     width: 90%;
-    margin: auto;
-    padding: 24px;
+    margin: 0 auto;
+    padding: 20px;
   }
 
   .book-details .main-details .details-book-img img {
