--- a/src/components/BookDetails/bookDetails.css
+++ b/src/components/BookDetails/bookDetails.css
@@ -5,7 +5,7 @@
   backdrop-filter: blur(2px);
   width: 100vw;
   height: 100vh;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
 }
